force-app/main/default/objects/Sell_Item__c/fields/Sell_Item_Stock__c.field-meta.xml
<CustomField>
    <fullName>Sell_Item_Stock__c</fullName>
    <label>Sell Item Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>