force-app/main/default/objects/Sell_Item__c/validationRules/Stock_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_check</fullName>
    <active>true</active>
    <errorConditionFormula>Sell_Item_Stock__c &gt; Merchandise__r.Merchandise_Stocks__c</errorConditionFormula>
    <errorDisplayField>Sell_Item_Stock__c</errorDisplayField>
    <errorMessage>Not enough Stock</errorMessage>
</ValidationRule>